test/types/tuple/ferguson/tuple-from-array-error.good
tuple-from-array-error.chpl:2: error: illegal tuple variable declaration with non-tuple initializer
