test/types/tuple/ferguson/tuple-from-array-error.chpl
var A:[1..2][1..3] int;
var (x,y,z) = A[1];
